# wingpanel-indicator-x11tray

lib/: meson.build  systray-box.c  systray-manager.c  systray-socket.c  systray.c
src/: Indicator.vala
vapi/: gtk_x11tray.vapi
